{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 42,
  "lineage": "a9150473-725f-d388-9391-df8ec4455937",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:961518039473:security-group/sg-096bcc1ea05db84f1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-096bcc1ea05db84f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "200.29.100.15/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e0fbb73f2d0b281"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH-SG",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05211b4e284de3a9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_public_security_group",
            "data.terraform_remote_state.network_configuration"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:961518039473:security-group/sg-02e0fbb73f2d0b281",
            "description": "Internet Reaching access for EC2 Instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e0fbb73f2d0b281",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3030,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3030
              },
              {
                "cidr_blocks": [
                  "200.29.100.15/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "EC2-PUBLIC_SG",
            "name_prefix": "",
            "owner_id": "961518039473",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05211b4e284de3a9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network_configuration"
          ]
        }
      ]
    }
  ]
}